# pdm_namespace_packaging

./: .gitignore  README.md  main.py
bar/: pyproject.toml
bar/bar/: __init__.py
namespace/: pyproject.toml
namespace/bar/boo/: __init__.py
